--- a/main.css
+++ b/main.css
@@ -5,3 +5,30 @@
 .top-coffee-title {
   margin-bottom: 25px !important;
 }
+
+.bubble {
+  position: relative;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  width: 300px;
+  background: #343a40;
+  border-radius: 40px;
+  padding: 24px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+}
+
+.bubble-bottom-left:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 24px solid #343a40;
+  border-right: 12px solid transparent;
+  border-top: 12px solid #343a40;
+  border-bottom: 20px solid transparent;
+  left: 32px;
+  bottom: -24px;
+}
